--- a/index.html
+++ b/index.html
@@ -8,7 +8,23 @@
 </head>
 <body>
     
-   
+   <h1>Web Design Practice</h1>
+
+   <div class="blog">
+    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nihil ipsam omnis aperiam placeat odio laudantium nobis saepe aliquid, quis natus maiores vitae totam aliquam nostrum veniam deserunt rerum ad obcaecati?</p>
+   </div>
+
+   <div class="blog">
+    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nihil ipsam omnis aperiam placeat odio laudantium nobis saepe aliquid, quis natus maiores vitae totam aliquam nostrum veniam deserunt rerum ad obcaecati?</p>
+   </div>
+
+   <div class="blog">
+    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nihil ipsam omnis aperiam placeat odio laudantium nobis saepe aliquid, quis natus maiores vitae totam aliquam nostrum veniam deserunt rerum ad obcaecati?</p>
+   </div>
+
+   <div class="blog">
+    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nihil ipsam omnis aperiam placeat odio laudantium nobis saepe aliquid, quis natus maiores vitae totam aliquam nostrum veniam deserunt rerum ad obcaecati?</p>
+   </div>
     
 </body>
 </html>
